Disable shelf tooltip on lock screen

When shelf view is invisible, tooltip should be hidden as well. (The
check becomes necessary because shelf view has been moved to container
that is shown at lock screen.)

Bug: 772931
Change-Id: I51d597df77a365bf084be148ab43a2e20b61a7ce
Reviewed-on: https://chromium-review.googlesource.com/707339
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Commit-Queue: Wenzhao (Colin) Zang <wzang@chromium.org>
Cr-Commit-Position: refs/heads/master@{#507431}
Former-commit-id: 87763d35c2cd0cb2e0ca069363348522a725cd9d